added a bunch of performance measuring code, tweaked to improve things and been working to clean out the multi threaded scheduler